# fruits_box

./: .gitignore  pyproject.toml
src/: fruits_recognition.py  prepare_images.py
