[tool.poetry]
name = "fruits-box"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fruits_box"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "^4.7.0.68"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
